--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <div id="logo">[ LOGO ]</div>
+            <div id="logo"></div>
 
             <ul>
                 <li><a href="#">home</a></li>
