Edição do article#qualidades e breves atualizações na div#titulo

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="../styles/style.css">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>hDC Host</title>
 </head>
 <body>
@@ -28,26 +30,26 @@
         </div>
     </header>
 
-
+    
 
     <main>
-        <article>
+        <article id="qualidades">
             <section id="seguranca">
-                <div class="imagens-qualidades"> [ IMAGEM ] </div>
+                <span class="material-icons">security</span>
 
                 <h3>Segurança</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accusamus porro culpa, facere in facilis perferendis magni minima sint at, placeat neque aliquam? Fugiat ratione maiores sint vero ipsa eos.</p>
             </section>
 
             <section id="velocidade">
-                <div class="imagens-qualidades"> [ IMAGENS ]</div>
+                <span class="material-icons">rocket_launch</span>
 
                 <h3>Velocidade</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, doloremque expedita omnis obcaecati iste tempora sunt minima quaerat dolore officia a alias aliquam, sequi excepturi ducimus in ea id praesentium.</p>
             </section>
 
             <section id="suporte">
-                <div class="imagens-qualidades"> [ IMAGENS ] </div>
+                <span class="material-icons">forum</span>
 
                 <h3>Suporte</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea autem tempora itaque ratione dolor alias architecto? Eum commodi praesentium dolorem iure repudiandae. Nihil, enim. Maxime magnam tempore molestiae.</p>
