--- a/html/index.html
+++ b/html/index.html
@@ -58,61 +58,62 @@
 
 
         <article id="planos">
-            <section id="padrao">
-                <p class="preco">R$15/mês</p>
+            <h2>Planos e Preços</h2>
+            <p>Selecione o plano perfeito para você:</p>
 
-                <h4>padrão</h4>
-                <ul>
-                    <li>2GB de espaço em disco</li>
-                    <li>10 Sub-domínios</li>
-                    <li>25 Contas de e-mail</li>
-                    <li>C-panel</li>
-                    <li>Suporte 24/7</li>
-                </ul>
-                <a href="#">Selecionar</a>
-            </section>
+            <div id="bloco-planos">
+                <section>
+                    <p>R$15/mês</p>
+                    <h4>padrão</h4>
+                    <ul>
+                        <li>2GB de espaço em disco</li>
+                        <li>10 Sub-domínios</li>
+                        <li>25 Contas de e-mail</li>
+                        <li>C-panel</li>
+                        <li>Suporte 24/7</li>
+                    </ul>
+                    <a href="#">Selecionar</a>
+                </section>
 
-            <section id="dedicado">
-                <p class="preco">R$30/mês</p>
+                <section>
+                    <p>R$30/mês</p>
+                    <h4>dedicado</h4>
+                    <ul>
+                        <li>5GB de espaço em disco</li>
+                        <li>20 Sub-domínios</li>
+                        <li>50 Contas de e-mail</li>
+                        <li>C-panel</li>
+                        <li>Suporte 24/7</li>
+                    </ul>
+                    <a href="#">Selecionar</a>
+                </section>
 
-                <h4>dedicado</h4>
-                <ul>
-                    <li>5GB de espaço em disco</li>
-                    <li>20 Sub-domínios</li>
-                    <li>50 Contas de e-mail</li>
-                    <li>C-panel</li>
-                    <li>Suporte 24/7</li>
-                </ul>
-                <a href="#">Selecionar</a>
-            </section>
+                <section>
+                    <p>R$50/mês</p>
+                    <h4>dedicado-plus</h4>
+                    <ul>
+                        <li>10GB de espaço em disco</li>
+                        <li>100 Sub-domínios</li>
+                        <li>100 Contas de e-mail</li>
+                        <li>C-panel</li>
+                        <li>Suporte 24/7</li>
+                    </ul>
+                    <a href="#">Selecionar</a>
+                </section>
 
-            <section id="dedicado-plus">
-                <p class="preco">R$30/mês</p>
-
-                <h4>dedicado-plus</h4>
-                <ul>
-                    <li>10GB de espaço em disco</li>
-                    <li>100 Sub-domínios</li>
-                    <li>100 Contas de e-mail</li>
-                    <li>C-panel</li>
-                    <li>Suporte 24/7</li>
-                </ul>
-                <a href="#">Selecionar</a>
-            </section>
-
-            <section id="cloud">
-                <p class="preco">R$30/mês</p>
-
-                <h4>cloud</h4>
-                <ul>
-                    <li>20GB de espaço em disco</li>
-                    <li>200 Sub-domínios</li>
-                    <li>200 Contas de e-mail</li>
-                    <li>C-panel</li>
-                    <li>Suporte 24/7</li>
-                </ul>
-                <a href="#">Selecionar</a>
-            </section>
+                <section>
+                    <p>R$100/mês</p>
+                    <h4>cloud</h4>
+                    <ul>
+                        <li>20GB de espaço em disco</li>
+                        <li>200 Sub-domínios</li>
+                        <li>200 Contas de e-mail</li>
+                        <li>C-panel</li>
+                        <li>Suporte 24/7</li>
+                    </ul>
+                    <a href="#">Selecionar</a>
+                </section>
+            </div>
         </article>
 
 
