Finalização do article#busca-dominio e breve atualização do footer

--- a/html/index.html
+++ b/html/index.html
@@ -143,7 +143,7 @@
 
 
         <footer>
-            <p>Pedro Lahm &#169; 2025</p>
+            <p>Pedro Lahm<sup>&#169;</sup> 2025</p>
         </footer>
     </main>
 </body>
