Finalização do article#contato e do footer

--- a/html/index.html
+++ b/html/index.html
@@ -133,8 +133,8 @@
             <p>Mande uma mensagem para nós conversarmos sobre a melhor hospedagem para o seu negócio.</p>
         
             <form action="cadastro.php" method="post" autocomplete="on">
-                <input type="text" placeholder="Seu nome" required>
-                <input type="text" placeholder="Seu e-mail" required>
+                <input type="text" name="nome" id="fnome" placeholder="Seu nome" required>
+                <input type="email" name="email" id="femail" placeholder="Seu e-mail" required>
                 <textarea name="texto" id="ftexto" placeholder="Digite sua mensagem" required></textarea>
                 <input type="submit" value="Enviar">
             </form>
